--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             </div>
 
             <div class="hero-image">
-                <img src="Assets/profile.jpg" alt="Jeevan K">
+                <img src="assets/profile.jpg" alt="Jeevan K"
+                    class="profile-jpg">
             </div>
 
         </div>
@@ -163,4 +164,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
